# ai-hedgefund

./: .cursorrules  .gitignore  COMPREHENSIVE_EOD_SYSTEM.md  DATABASE_STATUS_REPORT.md  DATA_COLLECTION_STATUS.md  DUCKDB_MIGRATION_SUMMARY.md  ENHANCED_EOD_SYSTEM_SUMMARY.md  ENHANCED_RAG_README.md  ENHANCEMENT_PHASES.md  EOD_DATA_PROVIDER_SUMMARY.md  FINAL_CLEANUP_STATUS.md  FINAL_DATA_COLLECTION_STATUS.md  FINAL_OPTIONS_FIX_STATUS.md  INDIAN_MARKET_TEST_RESULTS.md  INDIAN_STOCKS_INTEGRATION.md  INTRADAY_ML_SUMMARY.md  PHASE3_ADVANCED_FEATURES.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_NSEUTILITY_INTEGRATION.md  PHASE5_COMPLETION_SUMMARY.md  README.md  UI_TESTING_SUMMARY.md  UNIFIED_BACKGROUND_SERVICES_README.md  analyze_failed_dates.py  analyze_predictions.py  analyze_vector_store.py  build_enhanced_vector_store.py  build_vector_store.py  build_vector_store_chunked.py  build_vector_store_simple.py  check_background_status.py  check_database_status.py  check_fno_columns.py  check_intraday_status.py  check_options_status.py  check_parquet_structure.py  check_progress.py  comprehensive_backtest.py  comprehensive_backtesting_validation.py  (+130 more)
config/: eod_strategies.json  maintenance.json  tickers.json
data/: README.md  all_indian_stocks.txt  nse_complete_symbols.txt  options_chain_data.duckdb.wal
docs/: API_REFERENCE.md  AUTOMATIC_STARTUP_GUIDE.md  AUTO_SCHEDULER_TOMORROW_GUIDE.md  ENHANCED_EOD_SYSTEM_SUMMARY.md  EOD_EXTRA_DATA_SYSTEM.md  INDIAN_STOCKS_INTEGRATION.md  ML_MODELS.md  NATURAL_LANGUAGE_INTERFACE.md  OPTIONS_ANALYZER_FIX_SUMMARY.md  OPTIONS_DATA_COLLECTION.md  RAG_SYSTEM.md  (+12 more)
(+919 files in other folders)
