[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "AI-powered hedge fund with Indian market integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
yfinance = "^0.2.65"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.13.4"
pytz = "^2025.2"

# Phase 1: Core Data Infrastructure Dependencies
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"
python-dateutil = "^2.8.2"
tqdm = "^4.66.0"
rich = "^13.7.0"
loguru = "^0.7.2"

# Phase 2: Data Update & Maintenance Dependencies
schedule = "^1.2.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.group.ml.dependencies]
# Phase 4: ML Dependencies (will be added later)
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
optuna = "^3.4.0"
mlflow = "^2.8.0"

[tool.poetry.group.backtesting.dependencies]
# Phase 6: Backtesting Dependencies (will be added later)
# empyrical = "^0.5.5"  # Disabled due to Python 3.13 compatibility issues

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true